@@ -1,4 +1,6 @@
 DIST sssd-1.2.1.tar.gz 2980338 RMD160 44573041ac95c8d2d62b62346eca9016b6433766 SHA1 6ab14a9e76c215a72b407b286d81548318ad1f13 SHA256 71ca3db10136bf097fe1f0c22b23e5d67288c6826e2b2d9c14fa0d77978d5ddc
+DIST sssd-1.2.91.tar.gz 2979052 RMD160 afb44dbf40f01b7e3edbdf44c052da3ef26871af SHA1 0c2b22b27904dc212ad89c82499c9fcbd0b7bd98 SHA256 cf1e57e60aa03ea4493e63a8034e20c03bb976e4973a90cbc77789e3caffe9ef
 EBUILD sssd-libs-1.2.1.ebuild 560 RMD160 1199cc0ac78440e0617148c4379085ec57b27f98 SHA1 b3dcdf6797896fa888bf45f358f160761995259e SHA256 c7088e8d302144a0d1c2dfa6012b8d8018a1dcc9407c53b997e564bc4b3af7a8
-MISC ChangeLog 244 RMD160 a9f0be658028d3dad6273a3fdedf789a5e5501f7 SHA1 f6e9e9ac7ba7d3ddefe94173a58a91e64dd63e69 SHA256 72126ac6f8685cbd74b20d8f11ae1eb5cf0245a70ac8271ce9c66c9ab57c168c
+EBUILD sssd-libs-1.2.91.ebuild 578 RMD160 227106f3e723551f44c91dec6283be0bba8431cc SHA1 b1d514404e433b9284c478b68c483fbc3e5eadb2 SHA256 3df38bc20bc08870477486d4bbd4d5cf4af9c7f765f487bb1f16e458f1ecbce6
+MISC ChangeLog 397 RMD160 3ab4b4ec8a12b9084058d0c0fc97d5e51232e7d8 SHA1 97634e3548b12bdb33f2e881f13b44bf2d17022f SHA256 f2fcbe66bbe0e9d82418b232155afecc4b77e5e370e648b0a5e83423d6aec1d1
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
