@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sssd-libs-1.2.91 ( 23 Jul 2010 ) A. Vinogradov
+  23 Jul 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +sssd-libs-1.2.91.ebuild:
+  pre prelease version
+
 *sssd-libs-1.2.1 ( 15 Jul 2010 )
 
   15 Jul 2010; <slep@gentoo.org> +sssd-libs-1.2.1.ebuild, +metadata.xml:
